# merclib

./: .gitignore  Dockerfile  README.md  pyproject.toml
docs/: Opportunities@MeLi - CodeExercise DS_ML.docx
notebooks/: 01-eda.ipynb  02-ml.ipynb
src/new_used/: main.py
