[tool.poetry]
name = "merclib"
version = "0.1.0"
description = "Challenge Mercado Libre"
authors = ["cfloressuazo <cfloressuazo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.1.1"
numpy = "^1.26.0"
torch = "^2.1.0"
scikit-learn = "^1.3.1"
plotly = "^5.17.0"
nbformat = "^5.9.2"
matplotlib = "^3.8.0"
xgboost = "^2.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
